# neuralbuilder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  example_network.json
src/: logger.h  main.cpp  neuron.h
ui/: app-window.slint  new-network.slint
